src/test/ui/hr-subtype/hr-subtype.bound_co_a_vs_bound_co_b.stderr
error: compilation successful
  --> $DIR/hr-subtype.rs:100:1
   |
LL | / fn main() {
LL | |
LL | |
LL | |
LL | |
LL | |
LL | | }
   | |_^

error: aborting due to previous error

